--- a/Python/Flask/dbintro/templates/index.html
+++ b/Python/Flask/dbintro/templates/index.html
@@ -7,3 +7,16 @@
 
     <input type="Submit" value="Submit">
 </form>
+
+
+<h1>Login</h1>
+
+<form action="/login" method="POST">
+    <label>Email</label><br>
+    <input type="text" name="email"><br>
+
+    <label>Password</label><br>
+    <input type="password" name="password"><br>
+
+    <input type="Submit" value="Submit">
+</form>
